<package>
  <name>voronoi_planner</name>
  <version>0.1.0</version>
  <description>
     A path planner library, that searches a path from robot position to given goal on generalized Voronoi diagram (GVD) which is made up of regions around obstacles on costmap.
  </description>
  <maintainer email="frontwise@gmail.com">Roman Fedorenko</maintainer>
/maintainer>
  <license>BSD</license>

  <author>Roman Fedorenko</author>
  <url>http://wiki.ros.org/voronoi_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamicvoronoi</build_depend>


  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamicvoronoi</run_depend>



  <export>
      <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>

</package>
